# solana-mango-anchor-proxy

./: .gitignore  Anchor.toml  Makefile  README.md  pytest.ini  requirements.txt
client/: clienttest.py  mangohelper.py
programs/market-contract/: Cargo.toml
programs/market-contract/src/: errors.rs  lib.rs  mango_proxy.rs
tests/: marketcontract.py
